--- a/packages/example/index.html
+++ b/packages/example/index.html
@@ -43,6 +43,6 @@
         </div>
       </section>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/client/main.ts"></script>
   </body>
 </html>
